# live-music-data-quality-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  dashboard.py  db.py  main.py
app/ingestion/: __init__.py  generate_mock_data.py  normalize.py  pipeline.py  ticketmaster.py  validation.py
data/raw/: sample_events.csv
docs/: aws-deployment.md  live-music-artist-search-report.md  live-music-findings.qmd  live-music-market-quality-report.md
sql/: 001_schema.sql  002_views.sql  003_artist_search_quality.sql
tests/: test_api.py  test_normalize.py  test_ticketmaster.py  test_validation.py
